src/main/java/com/example/clothingstore/utils/error/TokenInvalidException.java
package com.example.clothingstore.utils.error;

public class TokenInvalidException extends Exception {
    public TokenInvalidException(String message) {
        super(message);
    }
}
